fixed the bug that drop all duplicate posts.

--- a/Dataset/Info_of_Dataset.ipynb
+++ b/Dataset/Info_of_Dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,14 +10,44 @@
     "import os\n",
     "import pandas as pd\n",
     "#read the path\n",
-    "file_path = \"Used_Dataset\"\n",
+    "file_path = \"../Used_Dataset\"\n",
     "#list all the files from the directory\n",
     "file_list = os.listdir(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.DS_Store', 'cumulative7.csv', 'cumulative6.csv', 'cumulative5.csv']"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_list.remove('.DS_Store')\n",
+    "# file_list.remove('finalCumulative.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +57,7 @@
       "Shape of cumulative7.csv: (12511, 4)\n",
       "Shape of cumulative6.csv: (1747, 4)\n",
       "Shape of cumulative5.csv: (12155, 4)\n",
-      "Shape of difference between datafram: (21243, 4)\n"
+      "Shape of difference between datafram: (22991, 4)\n"
      ]
     }
    ],
@@ -36,21 +66,21 @@
     "\n",
     "# Append all files together\n",
     "for file in file_list:\n",
-    "    df_temp = pd.read_csv(f'Used_Dataset/{file}')\n",
+    "    df_temp = pd.read_csv(f'../Used_Dataset/{file}')\n",
     "    print(f\"Shape of {file}: {df_temp.shape}\")\n",
     "    df_list.append(df_temp)\n",
     "\n",
-    "df_append = pd.concat(df_list, ignore_index=True).drop_duplicates(keep=False)\n",
+    "df_append = pd.concat(df_list, ignore_index=True).drop_duplicates(keep='first')\n",
     "print(f\"Shape of difference between datafram: {df_append.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_append.to_csv('Used_Dataset/finalCumulative.csv')"
+    "df_append.to_csv('../Used_Dataset/finalCumulative.csv')"
    ]
   },
   {
