--- a/Code/LDA_Script.ipynb
+++ b/Code/LDA_Script.ipynb
@@ -320,7 +320,7 @@
       },
       "outputs": [],
       "source": [
-        "data = load_data('../Dataset/finalCumulative.csv')\n",
+        "data = load_data('../Used_Dataset/finalCumulative.csv')\n",
         "filtered_data = data.drop(columns=['subreddit','date','timestamp'], axis=1)\n",
         "data = filtered_data.replace('\\n', ' ', regex=True)\n",
         "# data.head(5)"
@@ -11776,7 +11776,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.6 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -11789,7 +11790,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.9.6"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+      }
     }
   },
   "nbformat": 4,
