--- a/Code/LDA_Script.ipynb
+++ b/Code/LDA_Script.ipynb
@@ -966,7 +966,9 @@
         "nlp = spacy.load(\"en_core_web_sm\", disable=['parser', 'ner'])\n",
         "\n",
         "# Do lemmatization keeping only noun, adj, vb, adv\n",
-        "data_lemmatized = lemmatization(data_words_bigrams, allowed_postags=['NOUN', 'ADJ', 'VERB', 'ADV'])\n"
+        "# data_lemmatized = lemmatization(data_words, allowed_postags=['NOUN', 'ADJ', 'VERB', 'ADV']) # for unigram\n",
+        "data_lemmatized = lemmatization(data_words_bigrams, allowed_postags=['NOUN', 'ADJ', 'VERB', 'ADV']) # for bigram\n",
+        "# data_lemmatized = lemmatization(data_words_trigrams, allowed_postags=['NOUN', 'ADJ', 'VERB', 'ADV']) # for bigram\n"
       ]
     },
     {
