added in line comments to the python notebooks

--- a/LDA_Code/Reddit_Webscraping.ipynb
+++ b/LDA_Code/Reddit_Webscraping.ipynb
@@ -91,60 +91,61 @@
         "parent_id_list = []\n",
         "i = 0\n",
         "\n",
-        "#r/robloxparents\n",
-        "# for post in new:\n",
-        "#     print(i)\n",
-        "#     i += 1\n",
-        "#     alltext = post.title + '\\n' + post.selftext\n",
-        "#     if post is None:\n",
-        "#         # print(\"deleted post\")\n",
-        "#         continue\n",
-        "#     if \"korblox\" in alltext.lower() or \"beast mode\" in alltext.lower():\n",
-        "#         # print(\"misc spam\")\n",
-        "#         continue\n",
         "\n",
-        "#     sub_list.append(\"r/robloxparents\")\n",
-        "#     type_list.append('Post')\n",
-        "#     url_list.append(post.url)\n",
-        "#     title_list.append(post.title)\n",
-        "#     if post.author is None:\n",
-        "#         # print(\"deleted post author\")\n",
-        "#         author_list.append('N/A')\n",
-        "#     else:\n",
-        "#         author_list.append(post.author.name)\n",
-        "#     date_list.append(datetime.utcfromtimestamp(post.created_utc).strftime('%Y-%m-%d'))\n",
-        "#     timestamp_list.append(post.created_utc)\n",
-        "#     score_list.append(post.score)\n",
-        "#     text_list.append(alltext)\n",
-        "#     comment_id_list.append('N/A')\n",
-        "#     parent_id_list.append('N/A')\n",
+        "# r/robloxparents - Webscraping r/robloxparents subreddit\n",
+        "for post in new:\n",
+        "    print(i)\n",
+        "    i += 1\n",
+        "    alltext = post.title + '\\n' + post.selftext\n",
+        "    if post is None:\n",
+        "        # print(\"deleted post\")\n",
+        "        continue\n",
+        "    if \"korblox\" in alltext.lower() or \"beast mode\" in alltext.lower():\n",
+        "        # print(\"misc spam\")\n",
+        "        continue\n",
         "\n",
-        "#     post.comments.replace_more(limit=None)\n",
-        "#     comments = post.comments.list()\n",
-        "#     for comment in comments:\n",
-        "#         if comment is None or comment.body == \"[removed]\" or comment.body == \"[deleted]\":\n",
-        "#             # print(\"deleted comment\")\n",
-        "#             continue\n",
-        "#         sub_list.append(\"r/robloxparents\")\n",
-        "#         type_list.append('comment')\n",
-        "#         url_list.append(post.url)\n",
-        "#         title_list.append('N/A')\n",
-        "#         if comment.author is None:\n",
-        "#             # print(\"deleted comment author\")\n",
-        "#             author_list.append('N/A')\n",
-        "#         else:\n",
-        "#             author_list.append(comment.author.name)\n",
-        "#         date_list.append(datetime.utcfromtimestamp(comment.created_utc).strftime('%Y-%m-%d'))\n",
-        "#         timestamp_list.append(comment.created_utc)\n",
-        "#         score_list.append(comment.score)\n",
-        "#         text_list.append(comment.body)\n",
-        "#         comment_id_list.append(comment.id)\n",
+        "    sub_list.append(\"r/robloxparents\")\n",
+        "    type_list.append('Post')\n",
+        "    url_list.append(post.url)\n",
+        "    title_list.append(post.title)\n",
+        "    if post.author is None:\n",
+        "        # print(\"deleted post author\")\n",
+        "        author_list.append('N/A')\n",
+        "    else:\n",
+        "        author_list.append(post.author.name)\n",
+        "    date_list.append(datetime.utcfromtimestamp(post.created_utc).strftime('%Y-%m-%d'))\n",
+        "    timestamp_list.append(post.created_utc)\n",
+        "    score_list.append(post.score)\n",
+        "    text_list.append(alltext)\n",
+        "    comment_id_list.append('N/A')\n",
+        "    parent_id_list.append('N/A')\n",
         "\n",
-        "#         par = comment.parent()\n",
-        "#         if type(par) is praw.models.Submission:\n",
-        "#             parent_id_list.append('N/A')\n",
-        "#         else:\n",
-        "#             parent_id_list.append(par.id)\n",
+        "    post.comments.replace_more(limit=None)\n",
+        "    comments = post.comments.list()\n",
+        "    for comment in comments:\n",
+        "        if comment is None or comment.body == \"[removed]\" or comment.body == \"[deleted]\":\n",
+        "            # print(\"deleted comment\")\n",
+        "            continue\n",
+        "        sub_list.append(\"r/robloxparents\")\n",
+        "        type_list.append('comment')\n",
+        "        url_list.append(post.url)\n",
+        "        title_list.append('N/A')\n",
+        "        if comment.author is None:\n",
+        "            # print(\"deleted comment author\")\n",
+        "            author_list.append('N/A')\n",
+        "        else:\n",
+        "            author_list.append(comment.author.name)\n",
+        "        date_list.append(datetime.utcfromtimestamp(comment.created_utc).strftime('%Y-%m-%d'))\n",
+        "        timestamp_list.append(comment.created_utc)\n",
+        "        score_list.append(comment.score)\n",
+        "        text_list.append(comment.body)\n",
+        "        comment_id_list.append(comment.id)\n",
+        "\n",
+        "        par = comment.parent()\n",
+        "        if type(par) is praw.models.Submission:\n",
+        "            parent_id_list.append('N/A')\n",
+        "        else:\n",
+        "            parent_id_list.append(par.id)\n",
         "\n"
       ]
     },
@@ -4643,7 +4644,7 @@
         }
       ],
       "source": [
-        "#r/parenting\n",
+        "#r/parenting - Webscraping r/parenting subreddit\n",
         "for post in reddit.subreddit(\"gaming\").search(query = \"roblox\", limit=None):\n",
         "    # print(i)\n",
         "    i += 1\n",
@@ -5755,8 +5756,8 @@
         }
       ],
       "source": [
-        "#r/roblox\n",
-        "# parent OR son OR daughter OR niece OR nephew\n",
+        "#r/roblox - Webscraping r/roblox subreddit\n",
+        "# Could add (parent OR son OR daughter OR niece OR nephew) or (daughter OR son OR child) to the subquery\n",
         "for post in reddit.subreddit(\"roblox\").search(query = \"parent OR safe OR concern OR danger OR scam AND (daughter OR son OR child)\", limit=None):\n",
         "    print(i)\n",
         "    i += 1\n",
@@ -5873,9 +5874,7 @@
         "                    parent_id_list.append('N/A')\n",
         "                else:\n",
         "                    parent_id_list.append(par.id)\n",
-        "                break\n",
-        "\n",
-        "df = pd.DataFrame({'subreddit': sub_list, 'type': type_list, 'url': url_list, 'title': title_list, 'author': author_list, 'date': date_list, 'timestamp': timestamp_list, 'score': score_list, 'text': text_list, 'comment_id': comment_id_list, 'parent_id': parent_id_list})\n"
+        "                break"
       ]
     },
     {
@@ -5886,6 +5885,10 @@
       },
       "outputs": [],
       "source": [
+        "# Dataframe format: more thorough with the inclusion of author id, date id, and comment id\n",
+        "df = pd.DataFrame({'subreddit': sub_list, 'type': type_list, 'url': url_list, 'title': title_list, 'author': author_list, 'date': date_list, 'timestamp': timestamp_list, 'score': score_list, 'text': text_list, 'comment_id': comment_id_list, 'parent_id': parent_id_list})\n",
+        "\n",
+        "# Dataframe format: includes subreddit, posts, date, and timestamp\n",
         "df = pd.DataFrame({'subreddit': sub_list, 'text': text_list, 'date': date_list, 'timestamp': timestamp_list})"
       ]
     },
@@ -5897,40 +5900,9 @@
       },
       "outputs": [],
       "source": [
+        "# Saving the webscraping result in finalCumulative CSV file\n",
         "df.to_csv('../Used_Dataset/finalCumulative.csv', index=False)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7fvVoPu_8kym",
-        "outputId": "d4434c16-56d4-49de-8829-da359a6945b9"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "(10795, 4)\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(df.shape)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "V0kZC2rp3jho"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
