--- a/LDA_Code/Topic_Generation.ipynb
+++ b/LDA_Code/Topic_Generation.ipynb
@@ -27,10 +27,10 @@
         "# Runtime -> Restart session\n",
         "# Comment three !pip install lines\n",
         "# Run all\n",
-        "\n",
         "# !pip install pyLDAvis\n",
         "# !pip install --user -U nltk\n",
         "# !pip install \"pandas==1.5.3\"\n",
+        "\n",
         "import numpy as np\n",
         "import json\n",
         "import glob\n",
@@ -79,6 +79,7 @@
         }
       ],
       "source": [
+        "# Stopwords: lists of words with little context contributions\n",
         "nltk.download('stopwords')\n",
         "\n",
         "stopwords = stopwords.words(\"english\") #get stopwords from nltk\n",
@@ -113,12 +114,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "EXp-FdFNt7gc"
       },
       "outputs": [],
       "source": [
+        "# Removing stop words to reduce white noises in our dataset\n",
         "def remove_stopwords(texts):\n",
         "    return [[word for word in simple_preprocess(str(doc)) if word not in stopwords] for doc in texts]"
       ]
@@ -131,7 +133,7 @@
       },
       "outputs": [],
       "source": [
-        "\n",
+        "#  Loading input file\n",
         "def load_data(file):\n",
         "  data = pd.read_csv(file)\n",
         "  return data"
@@ -183,6 +185,7 @@
       },
       "outputs": [],
       "source": [
+        "# Removing leading or trailing white spaces\n",
         "data = [d.strip() for d in data]"
       ]
     },
@@ -206,6 +209,7 @@
         }
       ],
       "source": [
+        "# Removing new line characters\n",
         "new_data = []\n",
         "for d in data:\n",
         "  new_data.append(d.replace('\\n', '').replace('\\\\', ''))\n",
@@ -221,6 +225,7 @@
       },
       "outputs": [],
       "source": [
+        "# Lemmatization: the process of removing all 'ing', 'ed' and making different forms of a word into a single form\n",
         "def lemmatization(texts, allowed_postags=['NOUN', 'ADJ','VERB','ADV']):\n",
         "  nlp = spacy.load('en_core_web_sm', disable= ['parser', \"ner\"])\n",
         "  text_out= []\n",
@@ -232,11 +237,7 @@
         "        new_text.append(token.lemma_)\n",
         "    final = \" \".join(new_text)\n",
         "    text_out.append(final)\n",
-        "  return text_out\n",
-        "\n",
-        "\n",
-        "# lemmatize_text= lemmatization(data)\n",
-        "# print(lemmatize_text[0])"
+        "  return text_out"
       ]
     },
     {
@@ -259,31 +260,9 @@
         }
       ],
       "source": [
+        "# Applying lemmatization on the input data\n",
         "lemmatize_text= lemmatization(new_data)\n",
         "print(lemmatize_text[0])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KXNthBbvU2kB",
-        "outputId": "1c30bdf0-f7fa-4c5b-a8e9-f900a661f01b"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "<class 'str'>\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(type(lemmatize_text[0]))"
       ]
     },
     {
@@ -294,6 +273,7 @@
       },
       "outputs": [],
       "source": [
+        "# Applying stopwords removal on input data\n",
         "new_data = remove_stopwords(new_data)\n",
         "print(new_data)"
       ]
@@ -318,6 +298,7 @@
         }
       ],
       "source": [
+        "# Tokenization: the process of converting a sentence into a vector of words\n",
         "def gen_words(texts):  # tokenizing sentences into a list of words\n",
         "  final = []\n",
         "  for text in texts:\n",
@@ -328,31 +309,6 @@
         "data_words = gen_words(lemmatize_text)\n",
         "\n",
         "print(data_words[0])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "tKb8dX8Q_lnW"
-      },
-      "outputs": [],
-      "source": [
-        "# bag_of_words = np.array(data_words, dtype=\"object\")\n",
-        "# bag_of_words = np.unique(bag_of_words)\n",
-        "# data_words = list(bag_of_words)\n",
-        "# bag_of_words = np.reshape(bag_of_words, (2117,8))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "vBAgpO62BeVl"
-      },
-      "outputs": [],
-      "source": [
-        "# print(len(data_words))"
       ]
     },
     {
@@ -376,9 +332,10 @@
         }
       ],
       "source": [
+        "# Converting the word vectors into number vectors. Each word will be assigned to a corresponding key value for reversion\n",
+        "\n",
         "from prompt_toolkit.completion import word_completer\n",
         "id2word = corpora.Dictionary(data_words)\n",
-        "# id2word = corpora.Dictionary(bag_of_words)\n",
         "\n",
         "corpus = []\n",
         "for text in data_words:\n",
@@ -399,6 +356,7 @@
       },
       "outputs": [],
       "source": [
+        "# Runnning Topic Modeling\n",
         "lda_model = gensim.models.LdaMulticore(corpus=corpus,\n",
         "                                       id2word=id2word,\n",
         "                                       num_topics=5,\n",
@@ -473,12 +431,12 @@
         }
       ],
       "source": [
+        "# Evaluating topics generation\n",
         "from gensim.models import CoherenceModel\n",
         "\n",
         "# Compute Coherence Score\n",
-        "\n",
         "coherence_model_lda = CoherenceModel(model=lda_model, texts=data_words, dictionary=id2word, coherence='c_v')\n",
-        "# coherence_model_lda = CoherenceModel(model=lda_model, texts=lemmatize_text, corpus=corpus, coherence='c_v')\n",
+        "\n",
         "coherence_lda = coherence_model_lda.get_coherence()\n",
         "print('Coherence Score: ', coherence_lda)"
       ]
@@ -514,81 +472,85 @@
       },
       "outputs": [],
       "source": [
-        "# import numpy as np\n",
-        "# import tqdm\n",
-        "# grid = {}\n",
-        "# grid['Validation_Set'] = {}\n",
+        "# Fine tuning the LDA gensim model to fine the most optimal hyperparameters \n",
+        "# that would generate the best topic clusters. Mostly focusing on three specific\n",
+        "# variables: topic_num, alpha, beta.\n",
         "\n",
-        "# # Topics range\n",
-        "# min_topics = 2\n",
-        "# max_topics = 11\n",
-        "# step_size = 1\n",
-        "# topics_range = range(min_topics, max_topics, step_size)\n",
+        "import numpy as np\n",
+        "import tqdm\n",
+        "grid = {}\n",
+        "grid['Validation_Set'] = {}\n",
         "\n",
-        "# # Alpha parameter\n",
-        "# #A list of alpha values to be tested.\n",
-        "# #It includes a range of values from 0.01 to 1 with a step size of 0.3, as well as two special values: 'symmetric' and 'asymmetric'.\n",
-        "# alpha = list(np.arange(0.01, 1, 0.3))\n",
-        "# #assumes that all documents are equally likely to be a mixture of topics, resulting in a uniform distribution of topics across documents. So it maps rreviews to each topic evenly\n",
-        "# #It makes the model assume that every document should have roughly the same proportion of topics.\n",
-        "# alpha.append('symmetric')\n",
-        "# #allows for more variability in document-topic proportions.\n",
-        "# #It doesn't enforce a uniform distribution and allows documents to have varying degrees of focus on different topics.\n",
-        "# alpha.append('asymmetric')\n",
+        "# Topics range\n",
+        "min_topics = 2\n",
+        "max_topics = 11\n",
+        "step_size = 1\n",
+        "topics_range = range(min_topics, max_topics, step_size)\n",
         "\n",
-        "# # Beta parameter\n",
-        "# #A list of beta values to be tested. It follows a similar pattern to alpha, including a range and 'symmetric'.\n",
-        "# beta = list(np.arange(0.01, 1, 0.3))\n",
-        "# beta.append('symmetric')\n",
+        "# Alpha parameter\n",
+        "#A list of alpha values to be tested.\n",
+        "#It includes a range of values from 0.01 to 1 with a step size of 0.3, as well as two special values: 'symmetric' and 'asymmetric'.\n",
+        "alpha = list(np.arange(0.01, 1, 0.3))\n",
+        "#assumes that all documents are equally likely to be a mixture of topics, resulting in a uniform distribution of topics across documents. So it maps rreviews to each topic evenly\n",
+        "#It makes the model assume that every document should have roughly the same proportion of topics.\n",
+        "alpha.append('symmetric')\n",
+        "#allows for more variability in document-topic proportions.\n",
+        "#It doesn't enforce a uniform distribution and allows documents to have varying degrees of focus on different topics.\n",
+        "alpha.append('asymmetric')\n",
         "\n",
-        "# # Validation sets:\n",
-        "# # We have the corpus sets, which contains 2 versions of the corpus, 15% and 20%\n",
-        "# num_of_docs = len(corpus)\n",
+        "# Beta parameter\n",
+        "#A list of beta values to be tested. It follows a similar pattern to alpha, including a range and 'symmetric'.\n",
+        "beta = list(np.arange(0.01, 1, 0.3))\n",
+        "beta.append('symmetric')\n",
         "\n",
-        "# #A list containing two versions of the 15% corpus, one with 20% of the documents and another with 15% of the documents.\n",
-        "# corpus_sets = [gensim.utils.ClippedCorpus(corpus, int(num_of_docs*0.20)),\n",
-        "#                gensim.utils.ClippedCorpus(corpus, int(num_of_docs*0.15))]\n",
+        "# Validation sets:\n",
+        "# We have the corpus sets, which contains 2 versions of the corpus, 15% and 20%\n",
+        "num_of_docs = len(corpus)\n",
         "\n",
-        "# corpus_title = ['20% Corpus', '15% Corpus']\n",
+        "#A list containing two versions of the 15% corpus, one with 20% of the documents and another with 15% of the documents.\n",
+        "corpus_sets = [gensim.utils.ClippedCorpus(corpus, int(num_of_docs*0.20)),\n",
+        "               gensim.utils.ClippedCorpus(corpus, int(num_of_docs*0.15))]\n",
         "\n",
-        "# #Stores the results of the LDA model with different hyperparameters.\n",
-        "# model_results = {'Validation_Set': [],\n",
-        "#                  'Topics': [],\n",
-        "#                  'Alpha': [],\n",
-        "#                  'Beta': [],\n",
-        "#                  'Coherence': []\n",
-        "#                 }\n",
+        "corpus_title = ['20% Corpus', '15% Corpus']\n",
         "\n",
-        "# # Can take a long time to run\n",
-        "# if 1 == 1:\n",
-        "#   #progress bar\n",
-        "#     pbar = tqdm.tqdm(total=(len(beta)*len(alpha)*len(topics_range)*len(corpus_title)))\n",
+        "#Stores the results of the LDA model with different hyperparameters.\n",
+        "model_results = {'Validation_Set': [],\n",
+        "                 'Topics': [],\n",
+        "                 'Alpha': [],\n",
+        "                 'Beta': [],\n",
+        "                 'Coherence': []\n",
+        "                }\n",
         "\n",
-        "#     # iterate through validation corpus sets\n",
-        "#     for i in range(len(corpus_sets)):\n",
-        "#         # iterate through number of topics\n",
-        "#         for k in topics_range:\n",
-        "#             # iterate through alpha values\n",
-        "#             for a in alpha:\n",
-        "#                 # iterare through beta values\n",
-        "#                 for b in beta:\n",
-        "#                     #reconnect the runtime\n",
-        "#                     check_and_reconnect_drive()\n",
-        "#                     # get the coherence score for the given parameters\n",
-        "#                     cv = compute_coherence_values(corpus=corpus_sets[i], dictionary=id2word,\n",
-        "#                                                   k=k, a=a, b=b)\n",
+        "# Can take a long time to run\n",
+        "if 1 == 1:\n",
+        "  #progress bar\n",
+        "    pbar = tqdm.tqdm(total=(len(beta)*len(alpha)*len(topics_range)*len(corpus_title)))\n",
         "\n",
-        "#                     # Save the model results\n",
-        "#                     model_results['Validation_Set'].append(corpus_title[i])\n",
-        "#                     model_results['Topics'].append(k)\n",
-        "#                     model_results['Alpha'].append(a)\n",
-        "#                     model_results['Beta'].append(b)\n",
-        "#                     model_results['Coherence'].append(cv)\n",
+        "    # iterate through validation corpus sets\n",
+        "    for i in range(len(corpus_sets)):\n",
+        "        # iterate through number of topics\n",
+        "        for k in topics_range:\n",
+        "            # iterate through alpha values\n",
+        "            for a in alpha:\n",
+        "                # iterare through beta values\n",
+        "                for b in beta:\n",
+        "                    #reconnect the runtime\n",
+        "                    check_and_reconnect_drive()\n",
+        "                    # get the coherence score for the given parameters\n",
+        "                    cv = compute_coherence_values(corpus=corpus_sets[i], dictionary=id2word,\n",
+        "                                                  k=k, a=a, b=b)\n",
         "\n",
-        "#                     pbar.update(1)\n",
-        "#     # pd.DataFrame(model_results).to_csv('../Result/lda_tuning_results.csv', index=False)\n",
-        "#     # pd.DataFrame(model_results).to_csv('/content/drive/My Drive/Classes/lda_tuning_results.csv', index=False)\n",
-        "#     # pbar.close()"
+        "                    # Save the model results\n",
+        "                    model_results['Validation_Set'].append(corpus_title[i])\n",
+        "                    model_results['Topics'].append(k)\n",
+        "                    model_results['Alpha'].append(a)\n",
+        "                    model_results['Beta'].append(b)\n",
+        "                    model_results['Coherence'].append(cv)\n",
+        "\n",
+        "                    pbar.update(1)\n",
+        "    # pd.DataFrame(model_results).to_csv('../Result/lda_tuning_results.csv', index=False)\n",
+        "    # pd.DataFrame(model_results).to_csv('/content/drive/My Drive/Classes/lda_tuning_results.csv', index=False)\n",
+        "    # pbar.close()"
       ]
     },
     {
@@ -599,10 +561,10 @@
       },
       "outputs": [],
       "source": [
-        "# if 1==1:\n",
-        "# # pd.DataFrame(model_results).to_csv('./Result/lda_tuning_results.csv', index=False)\n",
-        "#     pd.DataFrame(model_results).to_csv('/content/drive/My Drive/Classes/lda_tuning_results.csv', index=False)\n",
-        "#     pbar.close()"
+        "if 1==1:\n",
+        "# pd.DataFrame(model_results).to_csv('./Result/lda_tuning_results.csv', index=False)\n",
+        "    pd.DataFrame(model_results).to_csv('/content/drive/My Drive/Classes/lda_tuning_results.csv', index=False)\n",
+        "    pbar.close()"
       ]
     },
     {
@@ -613,26 +575,26 @@
       },
       "outputs": [],
       "source": [
-        "# import matplotlib.pyplot as plt\n",
-        "# import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
         "\n",
-        "# # Load the model results from the CSV file\n",
-        "# model_results_df = pd.read_csv('/content/lda_tuning_results.csv')\n",
+        "# Load the model results from the CSV file\n",
+        "model_results_df = pd.read_csv('/content/lda_tuning_results.csv')\n",
         "\n",
-        "# # Filter the results for the 75% Corpus (you can change this if needed)\n",
-        "# # filtered_results = model_results_df[model_results_df['Validation_Set'] == '20% Corpus']\n",
+        "# Filter the results for the 75% Corpus (you can change this if needed)\n",
+        "# filtered_results = model_results_df[model_results_df['Validation_Set'] == '20% Corpus']\n",
         "\n",
-        "# # Group the results by the number of topics (Topics) and calculate the mean coherence score\n",
-        "# coherence_by_topics = model_results_df.groupby('Topics')['Coherence'].mean()\n",
+        "# Group the results by the number of topics (Topics) and calculate the mean coherence score\n",
+        "coherence_by_topics = model_results_df.groupby('Topics')['Coherence'].mean()\n",
         "\n",
-        "# # Plot the coherence score against the number of topics\n",
-        "# plt.figure(figsize=(12, 6))\n",
-        "# plt.plot(coherence_by_topics.index, coherence_by_topics.values, marker='o', linestyle='-')\n",
-        "# plt.xlabel('Number of Topics')\n",
-        "# plt.ylabel('Coherence Score (C_v)')\n",
-        "# plt.title('Coherence Score vs. Number of Topics')\n",
-        "# plt.grid(True)\n",
-        "# plt.show()"
+        "# Plot the coherence score against the number of topics\n",
+        "plt.figure(figsize=(12, 6))\n",
+        "plt.plot(coherence_by_topics.index, coherence_by_topics.values, marker='o', linestyle='-')\n",
+        "plt.xlabel('Number of Topics')\n",
+        "plt.ylabel('Coherence Score (C_v)')\n",
+        "plt.title('Coherence Score vs. Number of Topics')\n",
+        "plt.grid(True)\n",
+        "plt.show()"
       ]
     },
     {
@@ -643,10 +605,10 @@
       },
       "outputs": [],
       "source": [
-        "# data_topic_3 = model_results_df[model_results_df['Topics'] == 3]\n",
-        "# max_coherence = np.array(data_topic_3['Coherence'])\n",
-        "# print(max_coherence[3])\n",
-        "# # print(np.argmax(max_coherence))"
+        "data_topic_3 = model_results_df[model_results_df['Topics'] == 3]\n",
+        "max_coherence = np.array(data_topic_3['Coherence'])\n",
+        "print(max_coherence[3])\n",
+        "# print(np.argmax(max_coherence))"
       ]
     },
     {
