--- a/LDA_Code/Reddit_Webscraping.ipynb
+++ b/LDA_Code/Reddit_Webscraping.ipynb
@@ -1,6 +1,15 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Webscraping Notebook\n",
+        "\n",
+        "This notebook uses the Reddit PRAW API to gather a Reddit post dataset of parents discussing Roblox concerns and advice. "
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -53,6 +62,32 @@
         "print(praw.__version__)\n",
         "print(pd.__version__)\n",
         "print(csv.__version__)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Subreddit and Keyword Filtering\n",
+        "\n",
+        "The `reddit.subreddit` determines which subreddit we will pull from. We have a separate cell for each subreddit we use:\n",
+        "- r/robloxparents\n",
+        "- r/parenting\n",
+        "- r/roblox\n",
+        "\n",
+        "The `.search(query=)` part of the code decides which keywords Reddit posts in the dataset must have from this subreddit.\n",
+        "\n",
+        "Look for more info in the PRAW documentation: \n",
+        "- https://praw.readthedocs.io/en/stable/index.html\n",
+        "- https://github.com/praw-dev/praw\n",
+        "- https://praw.readthedocs.io/en/stable/code_overview/models/subreddit.html (`subreddit` method docs)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### r/robloxparents"
       ]
     },
     {
@@ -147,6 +182,13 @@
         "        else:\n",
         "            parent_id_list.append(par.id)\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### r/parenting\n"
       ]
     },
     {
@@ -4645,7 +4687,7 @@
       ],
       "source": [
         "#r/parenting - Webscraping r/parenting subreddit\n",
-        "for post in reddit.subreddit(\"gaming\").search(query = \"roblox\", limit=None):\n",
+        "for post in reddit.subreddit(\"parenting\").search(query = \"roblox\", limit=None):\n",
         "    # print(i)\n",
         "    i += 1\n",
         "    if post is None:\n",
@@ -4695,6 +4737,15 @@
         "        else:\n",
         "            parent_id_list.append(par.id)\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### r/roblox\n",
+        "\n",
+        "First cell is getting general posts, second cell is for getting weekly question threads."
       ]
     },
     {
@@ -5875,6 +5926,17 @@
         "                else:\n",
         "                    parent_id_list.append(par.id)\n",
         "                break"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### CSV Generation\n",
+        "\n",
+        "We used Pandas to help us export our data as a CSV file. See the documentation here:\n",
+        "\n",
+        "https://pandas.pydata.org/pandas-docs/stable/index.html"
       ]
     },
     {
