Added markdown and inline comments for Topic Generation
Also brief description for Survey Visualizations

--- a/LDA_Code/Topic_Generation.ipynb
+++ b/LDA_Code/Topic_Generation.ipynb
@@ -1,6 +1,17 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# LDA Topic Generation\n",
+        "\n",
+        "This notebook uses an LDA model in order to categorize Reddit posts into \"topics\". We can then label each of these topics using \"Thematic Analysis\" in order to find common parental concerns about gaming on Roblox.\n",
+        "\n",
+        "The input data is the data we gathered from our `Reddit_Webscraping.ipynb` notebook (the Reddit threads we collected)."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
@@ -21,7 +32,7 @@
       ],
       "source": [
         "#https://www.machinelearningplus.com/nlp/topic-modeling-gensim-python/#1introduction\n",
-        "# TO USE:\n",
+        "# TO USE ON GOOGLE COLAB:\n",
         "# Uncomment three !pip install lines\n",
         "# Run this cell ONLY\n",
         "# Runtime -> Restart session\n",
@@ -56,6 +67,15 @@
         "\n",
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Data Loading and Cleaning \n",
+        "\n",
+        "Stopwords, lemmatization, tokenization"
       ]
     },
     {
@@ -312,6 +332,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Fine Tuning and LDA Model\n",
+        "\n",
+        "We use a package from Gensim to do this"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -346,6 +375,13 @@
         "\n",
         "word = id2word[[0][:1][0]]\n",
         "print(word_completer)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Example without optimal parameters"
       ]
     },
     {
@@ -412,6 +448,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Example of Evaluating Model Quality\n",
+        "\n",
+        "We use a \"coherence score\" to update the model."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -462,6 +507,19 @@
         "                                       per_word_topics=True)\n",
         "    coherence_model_lda = CoherenceModel(model=lda_model, texts=data_words, dictionary=id2word, coherence='c_v')\n",
         "    return coherence_model_lda.get_coherence()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Finding Optimal Hyperparameters \n",
+        "\n",
+        "This part goes through many possible hyperparameter (alpha and beta value) combinations, trains a model, on each combination, then evaluates how good it is. It puts the data for each hyperparameter set tried in a spreadsheet.\n",
+        "\n",
+        "Use this spreadsheet to later train an LDA model with optimal hyperparameters.\n",
+        "\n",
+        "THIS PART TAKES A LONG TIME!!! Took us like 3 hours to run."
       ]
     },
     {
@@ -535,7 +593,7 @@
         "                # iterare through beta values\n",
         "                for b in beta:\n",
         "                    #reconnect the runtime\n",
-        "                    check_and_reconnect_drive()\n",
+        "                    # check_and_reconnect_drive()\n",
         "                    # get the coherence score for the given parameters\n",
         "                    cv = compute_coherence_values(corpus=corpus_sets[i], dictionary=id2word,\n",
         "                                                  k=k, a=a, b=b)\n",
@@ -565,6 +623,13 @@
         "# pd.DataFrame(model_results).to_csv('./Result/lda_tuning_results.csv', index=False)\n",
         "    pd.DataFrame(model_results).to_csv('/content/drive/My Drive/Classes/lda_tuning_results.csv', index=False)\n",
         "    pbar.close()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Display Results From Optimal Parameter Finding"
       ]
     },
     {
@@ -617,7 +682,14 @@
         "id": "CKhsArw_Ik3B"
       },
       "source": [
-        "##Visualizing the Data\n"
+        "## Visualizing the Data\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Old, unoptimized model as a remidner is cell below:\n"
       ]
     },
     {
@@ -731,6 +803,13 @@
         "pyLDAvis.enable_notebook()\n",
         "vis = pyLDAvis.gensim.prepare(lda_model, corpus, id2word, mds='mmds', R=30)\n",
         "vis"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Training an LDA Model with Optimal Hyperparameters"
       ]
     },
     {
@@ -918,6 +997,13 @@
       ],
       "source": [
         "print(max(document_topics))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Model Stats"
       ]
     },
     {
